# aoc-2025

./: .gitignore  Cargo.toml  README.md  justfile  template.md
.cargo/: config.toml
src/: lib.rs  utils.rs
src/template/: runner.rs
