[package]
name = "advent_of_code"
version = "0.12.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2024"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[profile.release]
codegen-units = 1
lto = "fat"
debug = true

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
anyhow = "1.0.100"
atoi_simd = "0.17.0"
cached = "0.56.0"

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dashmap = { version = "6.1.0", features = ["rayon"] }
dhat = { version = "0.3.3", optional = true }
hashbrown = "0.16.1"
itertools = "0.14.0"
pico-args = "0.5.0"
rayon = "1.11.0"
tinyjson = "2.5.1"

# Solution dependencies
